client-vue/src/assets/_darkmode.scss
/** Black theme **/
@media (prefers-color-scheme: dark) {
    body {
        background-color: #111;
        color: #e6e6e6;
    }

    a {
        color: #75ccee;
        &:hover {
            color: #fff;
        }
    }

    .section {
        background-color: #222;
        box-shadow: none;
        //box-shadow: 0 5px 10px #131313;
    }

    .section-title {
        background-color: #184279;
    }

    .streamer-title {
        background-color: #2b375b;
    }

    .small {
        color: #9b9b9b;
    }

    .notice {
        background-color: #484848;
        border-color: #2b2b2b;
        color: #d7d7d7;
    }

    .video-description {
        background-color: #484848;
    }

    .video-chapters {
        background-color: #333;
    }

    .video-controls {
        background-color: #384d7d;
    }

    .video-segments {
        background-color: #4c5884;
    }

    .video-status {
        background-color: #44683f;
        border-color: #383e37;
    }

    .video-description,
    .video-segments,
    .video-controls,
    .video-chapters {
        border-color: #333;
    }

    .game-list {
        tr.favourite {
            background-color: #278242;
            td {
                background-color: #278242;
            }
            .grey {
                color: #b0b0b0;
            }
        }
        tr.current {
            background-color: #732828;
        }
        td:nth-child(4) {
            color: #aaa;
        }
        a {
            color: #75ccee;
            &:hover {
                color: #fff;
            }
        }
    }

    .info-columns {
        .video-info {
            color: #c8c8c8;
        }
    }

    #js-status,
    #jobs-status {
        color: #eee;
        background-color: #333;
        border-color: #111;
    }

    .label {
        color: #6eb4ff;
    }

    .input {
        color: #aaa;
        background-color: #333;
        border-color: #666;
        &:focus {
            color: #eee;
            border-color: #777;
            background-color: #353535;
        }
        &[type=range] {
            background-color: #444;
        }
    }

    .card {
        .card-content {
            background-color: #3e3e3e;
        }
    }

    .log_viewer {
        color: #888;
        &.log-line-success {
            color: #5bd250;
        }
        &.log-line-fatal {
            color: #ff0000;
        }
        &.log-line-warning {
            color: #ff7300;
        }
        &.log-line-error {
            color: #db4d4d;
        }
        &.log-line-debug {
            color: #9c9c9c;
        }
    }

    .modal-box {
        .modal-box__container {
            background-color: #444;
        }
    }

    .field-group {
        background-color: #525252;
    }

    .input-help {
        color: #bbb;
    }
    

}

